; ModuleID = '/home/carl/AnghaBench/linux/fs/extr_libfs.c_simple_statfs.c'
source_filename = "/home/carl/AnghaBench/linux/fs/extr_libfs.c_simple_statfs.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dentry = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 }
%struct.kstatfs = type { i32, i32, i32 }

@PAGE_SIZE = common dso_local global i32 0, align 4
@NAME_MAX = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @simple_statfs(%struct.dentry* %0, %struct.kstatfs* %1) #0 {
  %3 = alloca %struct.dentry*, align 8
  %4 = alloca %struct.kstatfs*, align 8
  store %struct.dentry* %0, %struct.dentry** %3, align 8
  store %struct.kstatfs* %1, %struct.kstatfs** %4, align 8
  %5 = load %struct.dentry*, %struct.dentry** %3, align 8
  %6 = getelementptr inbounds %struct.dentry, %struct.dentry* %5, i32 0, i32 0
  %7 = load %struct.TYPE_2__*, %struct.TYPE_2__** %6, align 8
  %8 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  %10 = load %struct.kstatfs*, %struct.kstatfs** %4, align 8
  %11 = getelementptr inbounds %struct.kstatfs, %struct.kstatfs* %10, i32 0, i32 2
  store i32 %9, i32* %11, align 4
  %12 = load i32, i32* @PAGE_SIZE, align 4
  %13 = load %struct.kstatfs*, %struct.kstatfs** %4, align 8
  %14 = getelementptr inbounds %struct.kstatfs, %struct.kstatfs* %13, i32 0, i32 1
  store i32 %12, i32* %14, align 4
  %15 = load i32, i32* @NAME_MAX, align 4
  %16 = load %struct.kstatfs*, %struct.kstatfs** %4, align 8
  %17 = getelementptr inbounds %struct.kstatfs, %struct.kstatfs* %16, i32 0, i32 0
  store i32 %15, i32* %17, align 4
  ret i32 0
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
